fix image squishing

--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -100,6 +100,10 @@ ul {
   padding-top: 2%;
 }
 
+#gather > * img {
+  max-height: 500px;
+}
+
 .panel-title {
   background-color: #f5f5f5;
   border: 2px solid #ddd;
